--- a/app/templates/meeting_notice.html
+++ b/app/templates/meeting_notice.html
@@ -3,7 +3,7 @@
 {% block title %}Meeting Notice{% endblock %}
 
 {% block content %}
-<div class="booking-container">
+<div class="page-container">
 	<p style="font-family: 'Montserrat', sans-serif; font-size: 2em; text-align: center;">
 		Meeting #{{ meeting_number }} is {{ meeting_status }}.
 	</p>
