--- a/app/templates/voting_nps.html
+++ b/app/templates/voting_nps.html
@@ -15,7 +15,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="booking-container">
+<div class="page-container">
 	{% set legend_items = [
 		{'label': 'Votes', 'color': '#772432', 'type': 'line'},
 		{'label': 'NPS', 'color': 'rgba(0, 65, 101, 0.8)', 'border_color': '#ffffff', 'type': 'bar'},
