--- a/app/static/css/core/base.css
+++ b/app/static/css/core/base.css
@@ -46,6 +46,13 @@ h6,
     width: 100%;
 }
 
+.page-container {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 20px 15px;
+}
+
+
 @media (min-width: 769px) {
     .main-content {
         padding-left: 5%;
