--- a/app/static/css/pages/voting/voting-desktop.css
+++ b/app/static/css/pages/voting/voting-desktop.css
@@ -6,12 +6,12 @@
 @media (min-width: 1025px) {
 
 	/* Desktop-specific accordion adjustments */
-	.award-accordion .accordion-item,
+	.accordion-list .accordion-item,
 	.voting-section {
 		padding: 25px;
 	}
 
-	.award-accordion .accordion-header .question-text,
+	.accordion-list .accordion-header .question-text,
 	.section-title {
 		font-size: 1.25em;
 	}
